bug fixed: chosenBox invisible (Chrome/Opera) or unresponsive (Firefox) when overflowing the fieldset
git-svn-id: http://piwigo.org/svn/trunk@13592 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -386,7 +386,6 @@ DIV.comment BLOCKQUOTE {
 FIELDSET {
 	padding: 1em;
 	margin: 1em;
-	overflow: hidden; /* <- makes Opera happy */
 }
 
 FORM.filter FIELDSET UL {
